--- a/client/src/assets/tailwind.css
+++ b/client/src/assets/tailwind.css
@@ -1,3 +1,11 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+html {
+  @apply bg-white text-black;
+}
+
+.dark {
+  @apply bg-gray-800 text-white;
+}
